fix(styles) Remove the letter-spacing

--- a/gdpr/static/css/main.scss
+++ b/gdpr/static/css/main.scss
@@ -38,7 +38,6 @@ body {
 
 span {
   font-family: $font-family-sans-serif !important;
-  letter-spacing: 0.1em;
 }
 
 [class^="ais-"] {
@@ -836,7 +835,6 @@ h1.title__container {
       font-style: normal;
       font-stretch: normal;
       line-height: 2;
-      letter-spacing: 2.4px;
       text-align: left;
       color: rgb(134, 145, 176);
       text-transform: uppercase;
